--- a/learn_langchain/pyproject.toml
+++ b/learn_langchain/pyproject.toml
@@ -5,8 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "fastapi>=0.128.0",
     "ipykernel>=7.1.0",
     "langchain>=1.2.8",
     "langgraph>=1.0.7",
     "pandas>=3.0.0",
+    "pydantic>=2.12.5",
 ]
